@@ -1,3 +1,13 @@
+2012-10-02  Kent Tamura  <tkent@chromium.org>
+
+        Fix assertion failures on Chromium Debug bots for datetime/datetime-local input types.
+
+        * html/shadow/DateTimeFieldElements.cpp:
+        If a placeholder stirng is empty, use a sequence of "-".
+        (WebCore::DateTimeDayFieldElement::create):
+        (WebCore::DateTimeMonthFieldElement::create):
+        (WebCore::DateTimeYearFieldElement::create):
+
 2012-10-02  MORITA Hajime  <morrita@google.com>
 
         https://bugs.webkit.org/show_bug.cgi?id=98134
